# tracing-actix-web

./: Cargo.toml
examples/custom-root-span/: Cargo.toml
src/: lib.rs  root_span_macro.rs
