[workspace]
members = [".", "examples/opentelemetry", "examples/custom-root-span"]

[package]
name = "tracing-actix-web"
version = "0.4.0-beta.7"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

repository = "https://github.com/LukeMathWalker/tracing-actix-web"
documentation = "https://docs.rs/tracing-actix-web/"
readme = "README.md"

description = "Structured logging middleware for actix-web."

keywords = ["http", "actix-web", "tracing", "logging"]
categories = ["asynchronous", "web-programming"]

[features]
default = ["otel", "emit_event_on_error"]
otel = ["opentelemetry", "tracing-opentelemetry"]
emit_event_on_error = []

[dependencies]
actix-web = "=4.0.0-beta.8"
actix-http = "=3.0.0-beta.8"
actix-service = "^2.0.0"
tracing = "0.2"
tracing-futures = "0.3"
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }
opentelemetry = { version = "0.15", optional = true }
tracing-opentelemetry = { version = "0.14", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2"
tracing-log = "0.2.0"

[patch.crates-io]
tracing = { git = 'https://github.com/tokio-rs/tracing.git', branch = 'master' }
tracing-log = { git = 'https://github.com/tokio-rs/tracing.git', branch = 'master' }
tracing-futures = { git = 'https://github.com/tokio-rs/tracing.git', branch = 'master' }
tracing-subscriber = { git = 'https://github.com/tokio-rs/tracing.git', branch = 'master' }
tracing-opentelemetry = { git = 'https://github.com/tokio-rs/tracing.git', branch = 'master' }
